--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "type": "module",
   "scripts": {
+    "run-clear": "rm package-lock.json && rm -rf node_modules && npm install && vite",
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview",
@@ -20,7 +21,8 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "electron-updater": "^6.3.9"
+    "electron-updater": "^6.3.9",
+    "react-router": "^7.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
