--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "electron-updater": "^6.3.9",
     "react-router": "^7.2.0"
   },
